--- a/iPro/Base.lproj/Main.storyboard
+++ b/iPro/Base.lproj/Main.storyboard
@@ -102,10 +102,11 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="504"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="l9r-Ip-Pcy">
+                            <view contentMode="scaleAspectFit" translatesAutoresizingMaskIntoConstraints="NO" id="xws-wZ-xu3" customClass="GLImageView">
                                 <rect key="frame" x="0.0" y="0.0" width="320" height="504"/>
-                            </imageView>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6V1-Ty-R6z">
+                                <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
+                            </view>
+                            <button opaque="NO" contentMode="scaleToFill" enabled="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6V1-Ty-R6z">
                                 <rect key="frame" x="95" y="436" width="130" height="60"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="60" id="sAp-8R-Mrt"/>
@@ -113,31 +114,28 @@
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="31"/>
                                 <state key="normal" title="[ REC ]">
-                                    <color key="titleColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                    <color key="titleColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
+                                <connections>
+                                    <action selector="onRecord:" destination="Ltr-Ba-GWc" eventType="touchUpInside" id="l8X-0q-7Zp"/>
+                                </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="l9r-Ip-Pcy" firstAttribute="leading" secondItem="Ru2-eq-epc" secondAttribute="leading" id="6na-n4-e7W"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="6V1-Ty-R6z" secondAttribute="trailing" constant="79" id="93i-iw-lGT"/>
                             <constraint firstItem="ipy-2u-1JT" firstAttribute="top" secondItem="6V1-Ty-R6z" secondAttribute="bottom" constant="8" id="Gbb-wa-lm0"/>
-                            <constraint firstItem="ipy-2u-1JT" firstAttribute="top" secondItem="l9r-Ip-Pcy" secondAttribute="bottom" id="O5L-Gt-1iQ"/>
-                            <constraint firstItem="l9r-Ip-Pcy" firstAttribute="top" secondItem="uok-mE-PDS" secondAttribute="bottom" id="gol-lG-TfH"/>
-                            <constraint firstAttribute="trailing" secondItem="l9r-Ip-Pcy" secondAttribute="trailing" id="nFg-2y-Tbs"/>
+                            <constraint firstItem="ipy-2u-1JT" firstAttribute="top" secondItem="xws-wZ-xu3" secondAttribute="bottom" id="VRe-ZL-Spo"/>
+                            <constraint firstAttribute="trailing" secondItem="xws-wZ-xu3" secondAttribute="trailing" id="Wqh-fO-5de"/>
+                            <constraint firstItem="xws-wZ-xu3" firstAttribute="top" secondItem="uok-mE-PDS" secondAttribute="bottom" id="mkT-D4-MIo"/>
+                            <constraint firstItem="xws-wZ-xu3" firstAttribute="leading" secondItem="Ru2-eq-epc" secondAttribute="leading" id="oAe-3k-czZ"/>
                             <constraint firstAttribute="centerX" secondItem="6V1-Ty-R6z" secondAttribute="centerX" id="yrh-sf-Je4"/>
                         </constraints>
-                        <variation key="default">
-                            <mask key="constraints">
-                                <exclude reference="93i-iw-lGT"/>
-                            </mask>
-                        </variation>
                     </view>
                     <extendedEdge key="edgesForExtendedLayout"/>
                     <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
                     <connections>
-                        <outlet property="_previewImage" destination="l9r-Ip-Pcy" id="s53-H3-SWy"/>
+                        <outlet property="_previewImage" destination="xws-wZ-xu3" id="Fge-SX-Zbo"/>
                         <outlet property="_recordButton" destination="6V1-Ty-R6z" id="foN-Sp-TlI"/>
                     </connections>
                 </viewController>
